@@ -254,6 +254,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 		Fixed possible crash with NPOT PVR images
 		Optimized the loading time of PVR images
 		CCArray: improved performance in insert & delete elements
+	* marcofucci:
+		CCArray.fastRemoveObjectAtIndex patch.
 	* Marco Tillemans:
 		RenderTexture renders images with correct blend function. patch.
 		RenderTexture: performance fixes. Improved logic.
