@@ -5,6 +5,7 @@ version 0.99.5-rc1_GameJam - 8-Nov-2010
 . [NEW] Textures: TextureCache has a method to test if a texture is already cached (issue #793)
 . [NEW] ZipUtils: Added generic functions to uncompress any .gz or .ccz file
 . [FIX] Actions: OrbitCamera doesn't crash on Simulator
+. [FIX] CCArray: fastRemoveObjectAtIndex works as expected (issue #1024)
 . [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
 . [FIX] Director: projection is doubled in RetinaDisplay mode
 . [FIX] Menu: MenuItems can draw its children (issue #458)
